--- a/koansys/layout.html
+++ b/koansys/layout.html
@@ -27,7 +27,7 @@
 
 <!--Navigation-->
 {%- macro relbar() %}
-	<div id="navigationWrapper">
+	<div id="navigationWrapper" class="yup">
 		<div id="navHeader"></div>
 		<ul id="navigation">
 		{%- for rellink in rellinks %}
@@ -193,77 +193,79 @@
 	</head>
 
 	<body>
-		<div id="headerWrapper">
-			<div id="banner"></div>
-		</div>
-
-		<div id="bodyWrapper">
-			<div id="bodyContainer">
-				{%- block header %}{% endblock %}
-
-				{%- block relbar1 %}
-					{{ relbar() }}
-				{% endblock %}
-
-				{%- block content %}
-					{%- block sidebar1 %}
-						{# possible location for sidebar #}
+		<div id="pageWrapper">
+			<div id="headerWrapper">
+				<div id="banner"></div>
+			</div>
+	
+			<div id="bodyWrapper">
+				<div id="bodyContainer">
+					{%- block header %}{% endblock %}
+	
+					{%- block relbar1 %}
+						{{ relbar() }}
 					{% endblock %}
-
-					<div class="document">
-						{%- block document %}
-
-							<div class="documentwrapper">
-								{%- if render_sidebar %}
-									<div class="bodywrapper">
-								{%- endif %}
-
-								<div class="body">
-									{% block body %} {% endblock %}
-								</div>
-
-								{%- if render_sidebar %}
-									</div>
-								{%- endif %}
-							</div>
-						{%- endblock %}
-
-						{%- block sidebar2 %}
-							{{ sidebar() }}
+	
+					{%- block content %}
+						{%- block sidebar1 %}
+							{# possible location for sidebar #}
 						{% endblock %}
-
-						<div class="clearer"></div>
-					</div>
-				{%- endblock %}
-
-				{%- block footer %}
-					<div class="footer">
-
-						{%- if show_copyright %}
-							{%- if hasdoc('copyright') %}
-								{% trans path=pathto('copyright'), copyright=copyright|e %}
-									&copy; <a href="{{ path }}">Copyright</a> {{ copyright }}.
-								{% endtrans %}
-							{%- else %}
-								{% trans copyright=copyright|e %}
-									&copy; Copyright {{ copyright }}.
+	
+						<div class="document">
+							{%- block document %}
+	
+								<div class="documentwrapper">
+									{%- if render_sidebar %}
+										<div class="bodywrapper">
+									{%- endif %}
+	
+									<div class="body">
+										{% block body %} {% endblock %}
+									</div>
+	
+									{%- if render_sidebar %}
+										</div>
+									{%- endif %}
+								</div>
+							{%- endblock %}
+	
+							{%- block sidebar2 %}
+								{{ sidebar() }}
+							{% endblock %}
+	
+							<div class="clearer"></div>
+						</div>
+					{%- endblock %}
+	
+					{%- block footer %}
+						<div class="footer">
+	
+							{%- if show_copyright %}
+								{%- if hasdoc('copyright') %}
+									{% trans path=pathto('copyright'), copyright=copyright|e %}
+										&copy; <a href="{{ path }}">Copyright</a> {{ copyright }}.
+									{% endtrans %}
+								{%- else %}
+									{% trans copyright=copyright|e %}
+										&copy; Copyright {{ copyright }}.
+									{% endtrans %}
+								{%- endif %}
+							{%- endif %}
+	
+							{%- if last_updated %}
+								{% trans last_updated=last_updated|e %}
+									Last updated on {{ last_updated }}.
 								{% endtrans %}
 							{%- endif %}
-						{%- endif %}
-
-						{%- if last_updated %}
-							{% trans last_updated=last_updated|e %}
-								Last updated on {{ last_updated }}.
-							{% endtrans %}
-						{%- endif %}
-
-						{%- if show_sphinx %}
-							{% trans sphinx_version=sphinx_version|e %}
-								Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> {{ sphinx_version }}.
-							{% endtrans %}
-						{%- endif %}
-					</div>
-				{%- endblock %}
+	
+							{%- if show_sphinx %}
+								{% trans sphinx_version=sphinx_version|e %}
+									Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> {{ sphinx_version }}.
+								{% endtrans %}
+							{%- endif %}
+						</div>
+					{%- endblock %}
+				</div>
 			</div>
 		</div>
 	</body>
