--- a/koansys/layout.html
+++ b/koansys/layout.html
@@ -127,7 +127,6 @@
         HAS_SOURCE:  {{ has_source|lower }}
       };
     </script>
-	{%- set script_files = script_files + ["_static/default.js"] -%}
 	{%- set script_files = script_files + ["_static/js/jquery.js"] -%}
 	{%- set script_files = script_files + ["_static/js/bootstrap-transition.js"] -%}
 	{%- set script_files = script_files + ["_static/js/bootstrap-alert.js"] -%}
@@ -141,7 +140,7 @@
 	{%- set script_files = script_files + ["_static/js/bootstrap-collapse.js"] -%}
 	{%- set script_files = script_files + ["_static/js/bootstrap-carousel.js"] -%}
 	{%- set script_files = script_files + ["_static/js/bootstrap-typeahead.js"] -%}
-
+	{%- set script_files = script_files + ["_static/js/default.js"] -%}
 
     {%- for scriptfile in script_files %}
    		<script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
